@@ -1,3 +1,11 @@
+Knot Resolver 3.x.y (2018-mm-dd)
+================================
+
+Bugfixes
+--------
+- cache.clear('name'): fix some edge cases in API (#401)
+
+
 Knot Resolver 3.0.0 (2018-08-20)
 ================================
 
